crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__environment_doctor__plain.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---

EngramDB Environment Check

System
  ✓ pass-check: ok
  ✗ fail-check: broken
      line 1
      line 2
  Hint: try the fix
  ⚠ warn-check: soft warning
  ○ info-check: informational
  ✓ implicit-pass: implicit
  ✗ implicit-fail: implicit fail
  Sub group
    ✓ sub-pass: fine
    ⚠ sub-warn: watch out
        dim line
  Hint: look here
    ○ sub-info: fyi
    ✗ sub-fail: down

Other
  ✓ trivial: trivial ok
--- stderr ---
